--- a/MVC/NotesMarkePlace/Content/style.css
+++ b/MVC/NotesMarkePlace/Content/style.css
@@ -840,7 +840,7 @@ set-box-shadow-cicis-menu-to-go {
 
 
 #pagination-searchnotes {
-   margin-top: 1700px;
+   margin-top: 1600px;
    margin-bottom: 50px;
 }
 
@@ -1021,30 +1021,23 @@ ul.book-details li span.red {
 #page {
     padding: 0;
 }
-#page .pagination {
-    margin: 0;
-    margin-top: -60px;
-    padding: 50px 0;
-    margin-bottom: 60px;
-}
+
 #page .pagination li a {
-    border-radius: 50%;
-    width: 34px;
-    height: 34px;
-    color: #333;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 20px;
-    border:none;
-    margin-top:10px;
-    margin-left:10px;
-    z-index: 0;
+        border-radius: 50%;
+        width: 34px;
+        height: 34px;
+        color: #333;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 20px;
+        border: none;
+        margin-top: 10px;
+        margin-left: 10px;
+        z-index: 0;
 }
 
-
-element.style {
-}
-#page .pagination li a {
+.page-item,
+.page-link {
     border-radius: 50%;
     width: 34px;
     height: 34px;
@@ -1057,8 +1050,18 @@ element.style {
     /* margin-left: 10px; */
     z-index: 0;
 }
-.pagination-lg>li>a, .pagination-lg>li>span {
+.pagination-lg > li > a, .pagination-lg > li > span {
     padding: 8px 10px;
+    border-radius: 50%;
+    width: 34px;
+    height: 34px;
+    color: #333;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    border: none;
+    margin-left: 10px;
+    z-index: 0;
 }
 #page .pagination li a:hover,
 #page .pagination li a:focus {
@@ -1100,6 +1103,7 @@ element.style {
     font-style: bold;
     line-height: 28px;
     margin-left:-120px;
+    margin-top: 50px;
 }
 
 #General-Questions {
@@ -1123,22 +1127,62 @@ element.style {
     margin-left:0;
 }
 
-#answer {
-    margin-top: 20px;
+#answer1,
+#answer2,
+#answer3,
+#answer4
+#answer5,
+#answer6,
+#answer7,
+#answer8 {
+    width: 100%;
+    height: auto;
+    padding: 50px 0;
+    font-family: "Open Sans";
+    font-size: 16px;
 }
 
-.question-mark #question {
-    font-family: "Open Sans";
-    font-size: 18px;
-    font-weight: 600;
-    font-style:bold;
+.card-header p {
+    font-family: "open sans", sans-serif;
+    font-size: 16px;
     line-height: 22px;
     color: #333333;
 }
 
-.question-mark #answer {
-    font-family: "Open Sans";
+.card-body {
+    font-family: "open sans", sans-serif;
     font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    margin-left: -100px;
+    margin-top:50px;
+    color: #333333;
+    margin-top: 20px;
+    padding-bottom: 15px;
+    border: 1px solid #d1d1d1;
+}
+
+
+.question-mark,
+#question1,
+#question2,
+#question3,
+#question4,
+#question5,
+#question6,
+#question7,
+#question8 {
+    font-family: "Open Sans";
+    font-size: 18px;
+    font-weight: 600;
+    font-style: bold;
+    line-height: 22px;
+    color: #333333;
+}
+
+.question-mark {
+    font-family: "Open Sans";
+    font-size: 18px;
     font-weight: 400;
     font-style:normal;
     line-height: 22px;
@@ -1483,6 +1527,9 @@ textarea .form-control {
 }
 #basic-details textarea {
     height: 153px;
+    border: 1px solid #d1d1d1;
+    width: 100%;
+    border-radius: 3px;
 }
 
 #basic-details .btn-sell {
@@ -1518,6 +1565,7 @@ textarea .form-control {
 .margin-bottom{
     margin-top: 5px;
 }
+
 
 
 /*=======================================
@@ -3457,7 +3505,7 @@ table.table-members-details tr:hover{
 {
     margin-top: 20px;
     background-color: #6255a5;
-    width: 460px;
+    width: 100%;
     height: 40px;
     color: #fff;
     border-radius: 3px;
@@ -3467,4 +3515,31 @@ table.table-members-details tr:hover{
     text-transform: uppercase; 
 }
 
+.pagination,
+.pagination-lg {
+    border-radius: 50%;
+    width: 34px;
+    height: 34px;
+    color: #333;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    border: none;
+    z-index: 2;
+}
 
+
+
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
+        background-color: #6255a5;
+        border-color: #6255a5;
+        color: #fff;
+        cursor: pointer;
+        z-index: 2;
+}
+
+.right-arrow, .left-arrow {
+    color: #6255a5;
+    cursor: pointer;
+    z-index: 2;
+}
