--- a/MVC/NotesMarkePlace/Views/RegisteredUsers/ContactUs.cshtml
+++ b/MVC/NotesMarkePlace/Views/RegisteredUsers/ContactUs.cshtml
@@ -59,7 +59,7 @@
                     <div class="container">
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav pull-right">
-                                <li>@Html.ActionLink("Search Notes", "searchNotes", new { @class = "smooth-scroll" })</li>
+                                <li>@Html.ActionLink("Search Notes", "searchNotes",null, new { @class = "smooth-scroll" })</li>
                                 <li>@Html.ActionLink("Sell Your Notes", "Dashboard", new { @class = "smooth-scroll" })</li>
                                 <li>@Html.ActionLink("FAQ", "FAQ", new { @class = "smooth-scroll" })</li>
                                 <li>@Html.ActionLink("Contact Us", "ContactUs", new { @class = "smooth-scroll" })</li>
