--- a/MVC/NotesMarkePlace/Views/RegisteredUsers/index.cshtml
+++ b/MVC/NotesMarkePlace/Views/RegisteredUsers/index.cshtml
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="~/Content/bootstrap.min.css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="~/Content/style.css>
+    <link rel="stylesheet" href="~/Content/style.css">
 
     <!-- Responsive Tabs CSS -->
     <link rel="stylesheet" href="~/Content/responsive.css">
@@ -55,8 +55,9 @@
                         <span id="mobile-nav-open-btn">&#9776;</span>
 
                         <!-- Logo -->
-                        @Html.ActionLink("Home", "index", null, new { @class = "navbar-brand smooth-scroll" })
-                        <img src="~/images/Pre-Login/logo.png" class="img-responsive" alt="logo">
+                        <a class="navbar-brand smooth-scroll" href="#">
+                            <img src="~/images/Homepage/top-logo.png" class="img-responsive" alt="logo">
+                        </a>
 
                     </div>
 
@@ -64,10 +65,10 @@
                     <div class="container">
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav pull-right">
-                                <li>@Html.ActionLink("Search Notes", "searchNotes", null, new { @class = "smooth-scroll" })<hr /></li>
-                                <li>@Html.ActionLink("Sell Your Notes", "Dashboard", null, new { @class = "smooth-scroll" })<hr /></li>
-                                <li>@Html.ActionLink("FAQ", "FAQ", null, new { @class = "smooth-scroll" })<hr /></li>
-                                <li>@Html.ActionLink("Contact Us", "ContactUs", null, new { @class = "smooth-scroll" })<hr /></li>
+                                <li>@Html.ActionLink("Search Notes", "searchNotes", null, new { @class = "smooth-scroll" })</li>
+                                <li>@Html.ActionLink("Sell Your Notes", "Dashboard", null, new { @class = "smooth-scroll" })</li>
+                                <li>@Html.ActionLink("FAQ", "FAQ", null, new { @class = "smooth-scroll" })</li>
+                                <li>@Html.ActionLink("Contact Us", "ContactUs", null, new { @class = "smooth-scroll" })</li>
                                 <li>@Html.ActionLink("Login", "login", null, new { @id = "login-btn", @class = "btn btn-blue", @title = "Login", @role = "button" })</li>
                             </ul>
                         </div>
@@ -325,19 +326,20 @@
     <footer class="text-left">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 col-md-8 col-sm-8 col-xs-12">
+
+                <div class="col-md-10 col-sm-8 col-xs-12">
                     <p>
                         <br>
                         Copyright &copy; TatvaSoft All rights reserved.
                     </p>
                 </div>
 
-                <div class="col-lg-2 col-md-4 col-sm-4 col-xs-12">
-                    <ul class="search-social-list">
-                        <br>
-                        <li><img src="~/images/Homepage/facebook.png" alter="facebook"></li>
-                        <li><img src="~/images/Homepage/twitter.png" alter="twitter"></li>
-                        <li><img src="~/images/Homepage/linkedin.png" alter="linkedin"></li>
+                <div class="col-md-2 col-sm-4 col-xs-12">
+                    <ul class="social-list">
+                        <br/>
+                        <li><a href="#"><img src="~/images/Homepage/facebook.png" alter="facebook"></a></li>
+                        <li><a href="#"><img src="~/images/Homepage/twitter.png" alter="twitter"></a></li>
+                        <li><a href="#"><img src="~/images/Homepage/linkedin.png" alter="linkedin"></a></li>
                     </ul>
 
                 </div>
