--- a/css/style.css
+++ b/css/style.css
@@ -3460,4 +3460,39 @@ table.table-members-details tr:hover{
     text-transform: uppercase; 
 }
 
+#answer1,
+#answer2,
+#answer3,
+#answer4
+#answer5,
+#answer6,
+#answer7,
+#answer8 {
+    width: 100%;
+    height: auto;
+    padding: 50px 0;
+    font-family: "Open Sans";
+    font-size: 16px;
+    margin: 0;
+}
+
+.card-body {
+    border: 2px solid #d1d1d1;
+}
+
+#question1,
+#question2,
+#question3,
+#question4,
+#question5,
+#question6,
+#question7,
+#question8 {
+    font-family: "Open Sans";
+    font-size: 18px;
+    font-weight: 600;
+    font-style: bold;
+    line-height: 22px;
+    color: #333333;
+}
 
