--- a/MVC/NotesMarkePlace/Views/RegisteredUsers/MyDownloads.cshtml
+++ b/MVC/NotesMarkePlace/Views/RegisteredUsers/MyDownloads.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@model NotesMarkePlace.Models.Download
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -32,7 +34,7 @@
     <link rel="stylesheet" href="~/Content/style.css">
 
     <!-- Responsive Tabs CSS -->
-    <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="~/Content/responsive.css">
 
 </head>
 
@@ -136,7 +138,7 @@
 
                     <div class="col-md-4 col-sm-4 col-xs-4">
                         <input type="text" class="form-control mydownloads-search-textbox">
-                        <img src="../images/Dashboard/search-icon.svg" alter="search-icon" id="search-icon" placeholder="Search">
+                        <img src="~/images/Dashboard/search-icon.svg" alter="search-icon" id="search-icon" placeholder="Search">
 
                     </div>
 
@@ -468,15 +470,15 @@
     </footer>
     <!-- Footer Ends -->
     <!-- JQuery -->
-    <script src="../js/jquery.min.js"></script>
+    <script src="~/Scripts/jquery.min.js"></script>
 
     <!-- Bootstrap JS -->
-    <script src="../js/bootstrap/bootstrap.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
 
     <!-- Wow JS -->
-    <script src="../js/wow/wow.min.js"></script>
+    <script src="~/Scripts/wow.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="../js/script.js"></script>
+    <script src="~/Scripts/script.js"></script>
 
 </body>
