--- a/MVC/NotesMarkePlace/Views/RegisteredUsers/UserProfile.cshtml
+++ b/MVC/NotesMarkePlace/Views/RegisteredUsers/UserProfile.cshtml
@@ -159,7 +159,7 @@
                 </div>
 
 
-               @using (Html.BeginForm("UserProfile", "RegisteredUsers", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                @using (Html.BeginForm("UserProfile", "RegisteredUsers", FormMethod.Post, new { enctype = "multipart/form-data" }))
                 {
                     <div class="details">
 
@@ -222,6 +222,7 @@
                                     <div class="col-md-3 col-sm-3 col-xs-3">
                                         <select class="form-control phonecode">
                                             <option>+91</option>
+                                            <option>+635</option>
                                         </select>
                                     </div>
                                     <div class="col-md-9 col-sm-9 col-xs-9 tel">
@@ -234,7 +235,8 @@
                                 <div class="col-md-6 col-sm-6 col-xs-12 upload-profile-picture profile-form user-profile-form">
                                     <h5 class="profile-pic-heading">Profile Picture</h5>
                                     <div class="form-group upload-profile-picture">
-                                        @Html.EditorFor(model => model.ProfilePictureFile, new { htmlAttributes = new { @class = "form-control file-accept", @type = "file" } })
+                                        @Html.TextBoxFor(m => m.ProfilePictureFile, new { @class = "form-control", @type = "file" })
+
 
                                     </div>
 
@@ -260,7 +262,7 @@
 
                             <div class="col-md-6">
                                 <div class="form-group text-left">
-                                    @Html.LabelFor(m => m.AddressLine1, "Address Line 1 *")
+                                    @Html.LabelFor(m => m.AddressLine2, "Address Line 1 *")
                                     @Html.EditorFor(model => model.AddressLine1, new { htmlAttributes = new { @class = "form-control", @name = "address-line1", @placeholder = "Enter your address" } })
                                     @Html.ValidationMessageFor(model => model.AddressLine1, "", new { @class = "text-danger" })
                                 </div>
@@ -340,7 +342,8 @@
 
                     </div>
 
-                    <a id="btn-submit-admin" class="btn btn-blue" href="#" title="Submit" role="button">Submit</a>
+                    <button class="btn btn-sell" type="submit">Submit</button>
+                    <!--<a id="btn-submit-admin" class="btn btn-blue" href="#" title="Submit" role="button">Submit</a>-->
                 }
             </div><hr>
         </div>
@@ -360,7 +363,7 @@
 
                 <div class="col-md-2 col-sm-4 col-xs-12">
                     <ul class="social-list">
-                        <br/>
+                        <br />
                         <li><a href="#"><img src="~/images/Homepage/facebook.png" alter="facebook"></a></li>
                         <li><a href="#"><img src="~/images/Homepage/twitter.png" alter="twitter"></a></li>
                         <li><a href="#"><img src="~/images/Homepage/linkedin.png" alter="linkedin"></a></li>
@@ -371,10 +374,14 @@
         </div>
     </footer>
     <!-- Footer Ends -->
-    
+    <!-- JQuery -->
+    <script src="~/Scripts/jquery.min.js"></script>
 
     <!-- Bootstrap JS -->
     <script src="~/Scripts/bootstrap.min.js"></script>
+
+    <!-- Wow JS -->
+    <script src="~/Scripts/wow.min.js"></script>
 
     <!-- Custom JS -->
     <script src="~/Scripts/script.js"></script>
